# kenning

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.ja.md  README.md
bench/: RESULTS.md  VS-CODEQL.md  VS-GLEAN.md  VS-RA.md  corpus.sh  run.sh  vs-codeql.sh  vs-glean.sh  vs-ra.sh
bench/codeql/: codeql-pack.lock.yml  qlpack.yml  who-calls.ql
src/: kenning.rs  main.rs
tests/: core.rs
