[package]
name = "kenning"
version = "0.1.0"
edition = "2024"
description = "Semantic code search for Rust, built for AI coding agents — rust-analyzer facts baked into an embedded faceted DB, served in microseconds"
license = "MIT"
repository = "https://github.com/Mutafika/kenning"

[dependencies]
# クエリエンジン = enchudb (紐/円柱、全列自動 index の faceted 等値 AND が設計点)。
# git dep (rev = 0.13.1 release) — `cargo install --git .../kenning` が単体で通る。
# ローカル開発で兄弟 dir の enchudb を使う時は .cargo/config.toml の [patch] で差し替え
# (gitignore 済み。patch 有効中は Cargo.lock が書き換わるので commit に混ぜない)。
enchudb = { git = "https://github.com/Mutafika/enchudb", rev = "af2018c0212f7adf18ab4db91832f1ec39ed5489" }
enchudb-oplog = { git = "https://github.com/Mutafika/enchudb", rev = "af2018c0212f7adf18ab4db91832f1ec39ed5489" }
# indexer = syn で Rust ソースをパースして symbol/call fact を抽出。
syn = { version = "2", features = ["full", "visit"] }
quote = "1"
proc-macro2 = { version = "1", features = ["span-locations"] }
walkdir = "2"
# 正確な名前解決 = rust-analyzer の SCIP 出力を食う (occurrence を位置で syn と join)。
scip = "0.5"
protobuf = "3"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
